mule-user-guide/v/3.2/mule-wmq-transport-reference.adoc
=  Mule WMQ运输参考

用于IBM®WebSphere®MQ（Mule WMQ传输）的Mule Enterprise传输提供以下功能：

* 使用本地MQ点对点的Websphere MQ和Mule JMS之间的双向请求 - 响应消息传递。
* 使用JMSReplyTo的同步和异步请求 - 响应通信。
* 支持本地，多资源和XA事务
* 支持本机MQ消息类型
* 特定于WebSphere MQ的配置语法，用于消除MQ配置的复杂性
* 在JMS和本机MQ消息类型中都透明地支持异步请求 - 响应消息传递模式
* 支持连接重试策略（自我修复），有或没有事务处理
* 支持IBM特定的标头
包括JNDI连接的*  JNDI目标支持
* 每个端点控制目标客户端（本地或JMS兼容）
* 通过WMQ v6和WMQ v7认证（在这两种情况下都使用WebSphere MQ 6.0.2.8客户端JAR）

本页介绍如何配置和使用此传输及其连接器。它假定您已经了解如何配置和使用WebSphere MQ。有关WebSphere MQ的完整信息，请参阅 http://publib.boulder.ibm.com/infocenter/wmqv6/v6r0/index.jsp[WebSphere MQ信息中心]。

Mule WMQ传输仅在Mule企业版1.6或更高版本中可用，并且从2.2版开始，包含许多关键的性能和可靠性改进以及对WebSphere MQ特定功能的本机支持。

*Note*：社区JMS传输不提供对WebSphere MQ的完全支持，不建议用于生产WebSphere MQ安装。

== 设置Mule WMQ传输

在Mule 2.x中，在使用Mule WMQ传输之前，必须将WebSphere MQ主目录下{{}}目录中的以下JAR复制到您的Mule主目录下的`lib/user`目录中：

*  `com.ibm.mq.jar`
*  `com.ibm.mqetclient.jar`（如果使用远程XA事务）
*  `com.ibm.mq.jmqi.jar`（仅限WebSphere MQ版本7）
*  `com.ibm.mqjms.jar`
*  `dhbcore.jar`

此外，如果您使用本地绑定（`transportType="BINDINGS_MQ"`），则必须设置以下环境变量：

[source, code, linenums]
----
export LD_LIBRARY_PATH=/opt/mqm/java/lib
----

将此变量设置为随WebSphere MQ服务器安装附带的Java库目录的位置。有关绑定类型的更多信息，请参阅WebSphere MQ文档。

== 架构

*  WMQ架构：http://www.mulesoft.org/schema/mule/ee/wmq/3.2/mule-wmq-ee.xsd

== 使用Mule WMQ Transport

默认情况下，从Mule发送到WebSphere MQ的消息以本机格式发送，并禁止JMS（RFH2）头。此配置通过将参数附加到WebSphere MQ目标URI（`?targetClient=1`）的连接器透明地应用于下面的配置。要强制接收WebSphere MQ上的JMS行为（即使用非本地格式），请在WMQ连接器声明中使用以下属性设置：

[source, xml, linenums]
----
<wmq:connector name="..."           ...      targetClient="JMS_COMPLIANT"          .../>
----

*Note:*当消息有效载荷是对象时，必须将`targetClient`属性设置为`JMS_COMPLIANT`。

以下配置示例配置名为`test`的服务，该服务执行请求回复处理。它从本地WebSphere MQ端点（`wmq://REQUEST.QUEUE`）获取消息，并将它们转发到另一个本地WebSphere MQ端点`wmq://RESPONSE.QUEUE`。当Mule异步处理消息时，`Responder`服务等待，并在响应队列中接收消息时附加字符串RESPONSE OK。所有JMS语义都适用，并且会从消息属性中读取诸如replyTo和QoS属性之类的设置，或使用默认值（根据JMS规范）。

请注意关于配置的以下附加要点：

* 端点的`wmq` URI方案指示应该使用WebSphere MQ传输。
*  WMQ连接器声明中的`queueManager`属性与之前设置的WebSphere MQ QueueManager相匹配。
* 本地队列`REQUEST.QUEUE`和`RESPONSE.QUEUE`以前使用`runmqsc`实用程序进行设置。如果您在远程队列上运行，则可以使用`channel`属性指定通道。

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"      xmlns:spring="http://www.springframework.org/schema/beans"      xmlns:wmq="http://www.mulesoft.org/schema/mule/ee/wmq"      xmlns:test="http://www.mulesoft.org/schema/mule/test"    xsi:schemaLocation="      http://www.mulesoft.org/schema/mule/test http://www.mulesoft.org/schema/mule/test/3.2/mule-test.xsd       http://www.mulesoft.org/schema/mule/ee/wmq http://www.mulesoft.org/schema/mule/ee/wmq/3.2/mule-wmq-ee.xsd      http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.0.xsd      http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd">  <wmq:connector name="wmqConnector"                 hostName="winter" port="1414"                  queueManager="HELLO.QMGR"                 transportType="CLIENT_MQ_TCPIP"                  specification="1.1"                 disableTemporaryReplyToDestinations="true"                  username=""                 password=""                 numberOfConsumers="1">  </wmq:connector>  <model>    <service name="test">      <inbound>        <wmq:inbound-endpoint queue="REQUEST.QUEUE" exchange-pattern="request-response"/>      </inbound>      <test:component/>            <outbound>        <pass-through-router>          <wmq:outbound-endpoint queue="MIDDLE.QUEUE"/>          <reply-to address="wmq://RESPONSE.QUEUE"/>          <wmq:message-info-mapping/>        </pass-through-router>      </outbound>      <async-reply failOnTimeout="true" timeout="5000">        <wmq:inbound-endpoint queue="RESPONSE.QUEUE"/>        <single-async-reply-router>          <wmq:message-info-mapping/>        </single-async-reply-router>      </async-reply>    </service>      <service name="Responder">      <inbound>        <wmq:inbound-endpoint queue="MIDDLE.QUEUE"/>      </inbound>           <test:component appendString=" RESPONSE OK"/>    </service>  </model></mule>
----

如果您正在远程队列上运行，则可以使用WebSphere MQ实用程序`amqsget`来验证消息是否在远程队列上收到。

== 定义WMQ XA连接器

通过Spring定义CF是可选的，您可以简单地定义WMQ XA启用的连接器，如下所示：

[source, xml, linenums]
----
<wmq:xa-connector ...>
----

它在引擎盖下实例化XA CF，不需要引用明确定义的CF。

但是，在某些情况下，您需要明确定义CF，然后在连接器定义中引用它。如果是这种情况，那么CF类必须是MQXAConnectionFactory，如果使用XA事务。然后WMQ连接器必须引用这个bean，例如：

[source, xml, linenums]
----
<spring:bean id="mqXAFactory" class="com.ibm.mq.jms.MQXAConnectionFactory">...</spring:bean><wmq:xa-connector ... connectionFactory-ref="mqXAFactory">
----

== 入站邮件处理

入站消息由连接器接收并传递给组件。如果`useRemoteQueueDefinitons`连接器属性未设置为true且入站消息类型为`MQMT_REQUEST`，则组件返回的消息将发送到原始消息的`JMSReplyTo`属性中指定的队列。但是，如果组件中存在出站WebSphere MQ端点，它将覆盖replyto处理程序功能。默认情况下，`useRemoteQueueDefinitons`设置为false。

image:inbound-flow.png[入站流量]

== 出站邮件处理

出站端点行为取决于WebSphere MQ消息类型。如果消息类型为`MQMT_REPLY`或`MQMT_DATAGRAM`，则其他属性将从原始消息中复制并将消息分派到队列中。

如果消息类型为`MQMT_REQUEST`，则连接器会检查消息中是否存在`JMSReplyTo`设置。如果未设置，则创建临时队列。如果端点是同步的，则连接器等待响应。超时时间可以使用`responseTimeout`设置进​​行设置。如果连接器收到响应，它将由组件返回。

image:outbound-flow.png[出站流]

== 从JNDI中检索连接工厂

为了支持已经配置了JNDI注册表来存储连接工厂的情况，连接器声明应该包含以下参数。

[source, xml, linenums]
----
<wmq:connector ...      jndiInitialFactory="com.sun.jndi.ldap.LdapCtxFactory"     jndiProviderUrl="ldap://localhost:10389/"     connectionFactoryJndiName="cn=ConnectionFactory,dc=example,dc=com"
----

== 变压器

WMQ传输提供了一个转换器，用于通过提取消息负载将`com.ibm.jms.JMSMessage`或子类型转换为对象。它还提供一个转换器将对象转换回消息。您可以使用`<message-to-object-transformer>`和`<object-to-message-transformer>`元素来配置这些转换器。请注意，仅当`targetClient`设置为`JMS_COMPLIANT`时，对象有效内容才有效。

== 交易

您可以使用标准事务配置元素在WMQ传输端点上配置单资源（本地），多资源和XA事务。例如，您可以在出站端点上配置XA事务，如下所示：

[source, xml, linenums]
----
<jbossts:transaction-manager/><wmq:xa-connector name="wmqConnector" hostName="winter" ...>...  <outbound>    <pass-through-router>      <wmq:outbound-endpoint queue="out">        <xa-transaction action="ALWAYS_BEGIN"/>      </wmq:outbound-endpoint>    </pass-through-router>  </outbound>...
----

请注意，如果您正在使用XA事务，并且您要连接到需要队列管理器连接到远程资源的队列，则必须使用来自WebSphere MQ的扩展事务客户机（`mqetclient.jar`）。有关更多信息，请参阅WebSphere MQ 7帮助中的 http://publib.boulder.ibm.com/infocenter/wmqv7/v7r0/topic/com.ibm.mq.csqzaf.doc/cs10270_.htm[什么是扩展交易客户端？]。

有关使用交易的更多信息，请参阅 link:/mule-user-guide/v/3.2/transaction-management[交易管理]。

== 配置重试策略

WMQ传输支持 link:/mule-user-guide/v/3.2/configuring-reconnection-strategies[重试策略]。从Mule 2.2.3开始，您可以在连接器上配置超时值，如下所示：

[source, xml, linenums]
----
<wmq:connector name="wmqConnector" ...>  <spring:property name="connectionLostTimeout" value="3000"/>  <ee:retry-forever-policy frequency="3000" /></wmq:connector>
----

随Mule WMQ传输一起提供的示例允许您测试重试策略。有关完整信息，请参阅WMQ发行版中的自述文件。

== 已知限制

以下是使用Mule WMQ传输尚未完全测试的功能或不支持的功能：

* 远程队列（仅在以前的版本中测试过）
* 退出处理程序支持（未测试）
* 主题（未经测试）
*  MQMT_REPORT消息类型支持（不支持）
* 原生WMQ连接池支持（不支持）
*  SSL连接支持（不支持）
* 针对性能吞吐量增益的数据压缩（不支持）

== 配置参考

== 连接器

默认的WebSphere MQ连接器。

<connector...>的{​​{0}}属性
[%header,cols="10,10,10,10,60"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| queueManager  |字符串 |否 |  |要使用的QueueManager的名称。
| hostName  |字符串 |否 |  |要使用的QueueManager的主机名。
|端口 |端口号 |否 |  |要使用的QueueManager的端口。
| temporaryModel  |字符串 |否 |  |从此连接器创建临时目标时要使用的临时目标模型。
| ccsId  |整数 |否 |  | WebSphere MQ CCS ID。
| transportType  |  |否 |  |是否使用本地绑定或客户端/服务器TCP绑定。可能的值有：BINDINGS_MQ，CLIENT_MQ_TCPIP，DIRECT_HTTP，DIRECT_TCPIP和MQJD。
|频道 |字符串 |否 |  |用于与队列管理器通信的频道名称。
| {propagateMQEvents {1}}布尔 | {无{3}} |
当使用远程队列定义时，WMQ使用JMSReplyTo属性来传递响应。{} | useRemoteQueueDefinitions  |布尔值 |否 |  {{4}当设置为true时，该属性将导致Mule忽略ReplyTo队列目标，并且不会干扰WMQ的远程队列机制。默认情况下，它设置为false。这也意味着，通过使用WMQ的远程队列定义，当适当的情况成立时，不可能使用Mule的一些请求/响应模式。
| receiveExitHandler  |类名 |否 |  |接收退出处理程序实现的完全限定类名。
| receiveExitHandlerInit  |类名 |否 |  |接收退出处理程序的初始化参数。
| sendExitHandler  |类名 |否 |  |发送出口处理程序实现的完全限定类名。
| sendExitHandlerInit  |类名 |否 |  |发送出口处理程序的初始化参数。
| securityExitHandler  |类名称 |否 |  |安全出口处理程序实现的完全限定类名称。
| securityExitHandlerInit  |类名 |否 |  |安全出口处理程序的初始化参数。
| targetClient  |  |否 |  |指定它是以JMS格式还是非JMS格式。可能的值有：JMS_COMPLIANT或NONJMS_MQ（默认）。
|===

<connector...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|===

==  Xa连接器

用于XA事务的WebSphere MQ连接器。

<xa-connector...>的{​​{0}}属性

[%header,cols="10,10,10,10,60"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| queueManager  |字符串 |否 |  |要使用的QueueManager的名称。
| hostName  |字符串 |否 |  |要使用的QueueManager的主机名。
|端口 |端口号 |否 |  |要使用的QueueManager的端口。
| temporaryModel  |字符串 |否 |  |从此连接器创建临时目标时要使用的临时目标模型。
| ccsId  |整数 |否 |  | WebSphere MQ CCS ID。
| transportType  |  |否 |  |是否使用本地绑定或客户端/服务器TCP绑定。可能的值有：BINDINGS_MQ，CLIENT_MQ_TCPIP，DIRECT_HTTP，DIRECT_TCPIP和MQJD。
|频道 |字符串 |否 |  |用于与队列管理器通信的频道名称。
| {propagateMQEvents {1}}布尔 | {无{3}} |
当使用远程队列定义时，WMQ使用JMSReplyTo属性来传递响应。{} | useRemoteQueueDefinitions  |布尔值 |否 |  {{4}当设置为true时，该属性将导致Mule忽略ReplyTo队列目标，并且不会干扰WMQ的远程队列机制。默认情况下，它设置为false。这也意味着，通过使用WMQ的远程队列定义，当适当的情况成立时，不可能使用Mule的一些请求/响应模式。
| receiveExitHandler  |类名 |否 |  |接收退出处理程序实现的完全限定类名。
| receiveExitHandlerInit  |类名 |否 |  |接收退出处理程序的初始化参数。
| sendExitHandler  |类名 |否 |  |发送出口处理程序实现的完全限定类名。
| sendExitHandlerInit  |类名 |否 |  |发送出口处理程序的初始化参数。
| securityExitHandler  |类名称 |否 |  |安全出口处理程序实现的完全限定类名称。
| securityExitHandlerInit  |类名 |否 |  |安全出口处理程序的初始化参数。
| targetClient  |  |否 |  |指定它是以JMS格式还是非JMS格式。可能的值有：JMS_COMPLIANT或NONJMS_MQ（默认）。
|===

<xa-connector...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|===

== 入站端点

接收WMQ消息的端点。

<inbound-endpoint...>的{​​{0}}属性

[%header,cols="10,10,10,10,60"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|队列 |字符串 |是 |   |队列名称。
|===

<inbound-endpoint...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|骡：响应 | 0..1  |
|骡：抽象重新传递策略 | 0..1  |
|骡：抽象事务 | 0..1  |
|骡：抽象-XA的事务 | 0..1  |
|骡：抽象安全过滤器 | 0..1  |
|骡：抽象滤波器 | 0..1  |
| {选择{1}} 0..1  |
|===

== 出站端点

WMQ消息发送到的端点。

<outbound-endpoint...>的{​​{0}}属性

[%header,cols="10,10,10,10,60"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|队列 |字符串 |是 |   |队列名称。
| disableTemporaryReplyToDestinations  |布尔值 |否 |   |如果设置为false（默认值），当Mule执行请求/响应调用时，自动设置为接收来自远程WMQ调用的响应。
| correlationId  |字符串 |否 |   |客户端可以使用关联ID标头字段将一条消息链接到另一条消息。典型的用例是将响应消息与其请求消息链接起来。 CorrelationID必须是24个字节的字符串。 WebSphere将用零填充较短的值，以便固定长度始终为24个字节。由于WMQ提供商发送的每条消息都分配有消息ID值，因此通过消息ID链接消息很方便。所有消息ID值必须以“ID：”前缀开头。
| messageType  |   |否 |   |指示消息类型。每种消息类型都有与之相关的特定行为。定义了以下消息类型：MQMT_REQUEST：消息需要回复。使用出站路由器的<ReplyTo>元素指定回复队列的名称。 Mule处理底层配置。 MQMT_DATAGRAM：该消息不需要回复。 MQMT_REPLY：该消息是对先前请求消息（MQMT_REQUEST）的回复。该消息必须发送到出站路由器上配置的<ReplyTo>所指示的队列。 Mule自动配置请求以控制如何设置回复的MessageId和CorrelationId。 MQMT_REPORT：该消息报告某些预期的或意外的事件，通常与某些其他消息（例如，收到的包含无效数据的请求消息）有关。将消息发送到原始消息的消息描述符的<ReplyTo>配置所指示的队列。
| characterSet  |整数 |否 |   |如果设置，则此属性将覆盖目标队列或主题的编码字符集属性。
| persistentDelivery  |布尔值 |否 |   |如果设置为true，则JMS提供程序会在发送消息时将其记录到稳定存储器中，如果交付不成功，可以恢复。如果消息在传输过程中丢失，则应用程序将遇到问题，客户端将消息标记为持久消息。如果偶尔丢失的消息是可容忍的，则客户端将消息标记为非永久消息。客户使用交付模式告诉JMS提供商如何平衡消息传输可靠性/吞吐量。传送模式仅涵盖将消息传送到目的地。持续传送模式不保证在目的地保留消息，直到收到确认为止。客户应该假定消息保留策略是以管理方式设置的。消息保留策略管理从目的地到消息使用者的消息传递的可靠性。例如，如果客户的消息存储空间用尽，则可能会丢弃由特定于站点的消息保留策略定义的一些消息。如果消息的传递模式是持久性的，并且目标具有足够的消息保留策略，则消息只能保证一次由JMS提供程序传递一次。
| timeToLive  | long  | no  |   |根据消息保留一条生成的消息来定义其派发时间的默认时间长度（以毫秒为单位）系统。生存时间默认设置为零（永久）。
| priority  | substitutablePriorityNumber  |否 |   |设置消息优先级。 JMS定义了一个十级优先级值，0作为最低优先级，9作为最高优先级。此外，客户应将优先级0-4视为正常优先级和优先级5-9的等级，作为快速优先级的等级。 JMS不要求提供者严格执行消息的优先级排序。但是，它应该尽最大努力在正常消息之前提供加急消息。
| targetClient  |   |否 |   |指定它是以JMS格式还是非JMS格式。可能的值有：JMS_COMPLIANT或NONJMS_MQ（默认）。
|===

<outbound-endpoint...>的{​​{0}}子元素


[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|骡：响应 | 0..1  |
|骡：抽象重新传递策略 | 0..1  |
|骡：抽象事务 | 0..1  |
|骡：抽象-XA的事务 | 0..1  |
|骡：抽象安全过滤器 | 0..1  |
|骡：抽象滤波器 | 0..1  |
| {选择{1}} 0..1  |
|===

== 端点

全球WMQ端点定义。请注意，全局端点就像可以从中创建新端点的端点工厂。因此，此端点具有入站和出站端点属性的联合。根据这个端点的使用方式，不需要的属性将被忽略。

<endpoint...>的{​​{0}}属性

[%header,cols="10,10,10,10,60"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|队列 |字符串 |是 |   |队列名称。
| disableTemporaryReplyToDestinations  |布尔值 |否 |   |如果设置为false（默认值），当Mule执行请求/响应调用时，自动设置为接收来自远程WMQ调用的响应。
| correlationId  |字符串 |否 |   |客户端可以使用关联ID标头字段将一条消息链接到另一条消息。典型的用例是将响应消息与其请求消息链接起来。 CorrelationID必须是24个字节的字符串。 WebSphere将用零填充较短的值，以便固定长度始终为24个字节。由于WMQ提供商发送的每条消息都分配有消息ID值，因此通过消息ID链接消息很方便。所有消息ID值必须以“ID：”前缀开头。
| messageType  |   |否 |   |指示消息类型。每种消息类型都有与之相关的特定行为。定义了以下消息类型：MQMT_REQUEST：消息需要回复。使用出站路由器的<ReplyTo>元素指定回复队列的名称。 Mule处理底层配置。 MQMT_DATAGRAM：该消息不需要回复。 MQMT_REPLY：该消息是对先前请求消息（MQMT_REQUEST）的回复。该消息必须发送到出站路由器上配置的<ReplyTo>所指示的队列。 Mule自动配置请求以控制如何设置回复的MessageId和CorrelationId。 MQMT_REPORT：该消息报告某些预期的或意外的事件，通常与某些其他消息（例如，收到的包含无效数据的请求消息）有关。将消息发送到原始消息的消息描述符的<ReplyTo>配置所指示的队列。
| characterSet  |整数 |否 |   |如果设置，则此属性将覆盖目标队列或主题的编码字符集属性。
| persistentDelivery  |布尔值 |否 |   |如果设置为true，则JMS提供程序会在发送消息时将其记录到稳定存储器中，如果交付不成功，可以恢复。如果消息在传输过程中丢失，则应用程序将遇到问题，客户端将消息标记为持久消息。如果偶尔丢失的消息是可容忍的，则客户端将消息标记为非永久消息。客户使用交付模式告诉JMS提供商如何平衡消息传输可靠性/吞吐量。传送模式仅涵盖将消息传送到目的地。持续传送模式不保证在目的地保留消息，直到收到确认为止。客户应该假定消息保留策略是以管理方式设置的。消息保留策略管理从目的地到消息使用者的消息传递的可靠性。例如，如果客户的消息存储空间用尽，则可能会丢弃由特定于站点的消息保留策略定义的一些消息。如果消息的传递模式是持久性的，并且目标具有足够的消息保留策略，则消息只能保证一次由JMS提供程序传递一次。
| timeToLive  | long  | no  |   |根据消息保留一条生成的消息来定义其派发时间的默认时间长度（以毫秒为单位）系统。生存时间默认设置为零（永久）。
| priority  | substitutablePriorityNumber  |否 |   |设置消息优先级。 JMS定义了一个十级优先级值，0作为最低优先级，9作为最高优先级。此外，客户应将优先级0-4视为正常优先级和优先级5-9的等级，作为快速优先级的等级。 JMS不要求提供者严格执行消息的优先级排序。但是，它应该尽最大努力在正常消息之前提供加急消息。
| targetClient  |   |否 |   |指定它是以JMS格式还是非JMS格式。可能的值有：JMS_COMPLIANT或NONJMS_MQ（默认）。
|===

<endpoint...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|骡：响应 | 0..1  |
|骡：抽象重新传递策略 | 0..1  |
|骡：抽象事务 | 0..1  |
|骡：抽象-XA的事务 | 0..1  |
|骡：抽象安全过滤器 | 0..1  |
|骡：抽象滤波器 | 0..1  |
| {选择{1}} 0..1  |
|===

== 消息到对象转换器

通过提取消息负载将com.ibm.jms.JMSMessage或子类型转换为对象。

<message-to-object-transformer...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|===

== 对象到消息转换器

将对象转换回com.ibm.jms.JMSMessage。

<object-to-message-transformer...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|===

== 事务

事务处理允许将一系列操作分组在一起，以便在出现故障时将它们回滚。设置操作（例如ALWAYS_BEGIN或JOIN_IF_POSSIBLE）以及事务的超时设置。

<transaction...>的{​​{0}}子元素

[%header,cols="3*",width=10%]
|===
| {名称{1}}基数 |说明
|===
